src/objects/E2_Scope__c.object
<CustomObject>
    <description>Estimator 2.0</description>
    <fields>
        <fullName>Complexity__c</fullName>
        <description>Complexity (High, Medium, Low)</description>
        <globalPicklist>E2_Complexity</globalPicklist>
        <inlineHelpText>Complexity of this scope(High, Medium, Low)</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this scope</description>
        <inlineHelpText>Description of this scope</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Direct_High_Hrs__c</fullName>
        <description>Hours calculated when the complexity selected is High.</description>
        <inlineHelpText>Hours calculated when the complexity selected is High.</inlineHelpText>
        <label>Direct High Hrs</label>
        <summarizedField>E2_Effort__c.High_Effort_Hrs__c</summarizedField>
        <summaryForeignKey>E2_Effort__c.Scope__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Direct_Low_Hrs__c</fullName>
        <description>Hours calculated when the complexity selected is Low.</description>
        <inlineHelpText>Hours calculated when the complexity selected is Low.</inlineHelpText>
        <label>Direct Low Hrs</label>
        <summarizedField>E2_Effort__c.Low_Effort_Hrs__c</summarizedField>
        <summaryForeignKey>E2_Effort__c.Scope__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Direct_Medium_Hrs__c</fullName>
        <description>Hours calculated when the complexity selected is Medium on scope.</description>
        <inlineHelpText>Hours calculated when the complexity selected is Medium on scope.</inlineHelpText>
        <label>Direct Medium Hrs</label>
        <summarizedField>E2_Effort__c.Effort_Hrs__c</summarizedField>
        <summaryForeignKey>E2_Effort__c.Scope__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>This field will be used to display scope in selected order related to particular estimate on estimator 2.0 app.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E2_Assumption__c</fullName>
        <label>Assumption</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Effort_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Custom field to store multiplier number X, which will increase the scope effort by number X.</description>
        <inlineHelpText>This factor multiplies the efforts defined the scope .If a multiplier is applied on the parent scope all the child scope efforts automatically inherit that factor multiplication.On reparenting ,the factor of new parent if applied.</inlineHelpText>
        <label>Effort Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this scope active?</description>
        <inlineHelpText>Is this scope active?</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When marked by the SA as favorite ,the SA can find the same in the &quot;My Scope&quot; section when adds a scope from template.</description>
        <inlineHelpText>When marked by the SA as favorite ,the SA can find the same in the &quot;My Scope&quot; section when adds a scope from template.</inlineHelpText>
        <label>Is Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOE_Hrs__c</fullName>
        <description>Calculated base field for estimates depending on complexity selected.</description>
        <inlineHelpText>Calculated base field for estimates depending on complexity selected.</inlineHelpText>
        <label>LOE Hrs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent scope of this scope.</description>
        <inlineHelpText>(Optional) - Parent scope of this scope.</inlineHelpText>
        <label>Parent Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipName>Child_Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presales_LOE__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Relationship to Presales LOE</description>
        <inlineHelpText>Associated Estimate Record</inlineHelpText>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipName>E2_Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_Flag__c</fullName>
        <description>Flagging scope item : Red(question pending),yellow(review needed) and green(complete).</description>
        <inlineHelpText>Flagging scope item : Red(question pending),yellow(review needed) and green(complete).</inlineHelpText>
        <label>Scope Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contains the scopes relevant to the group.For eg: Sales cloud implementation with 100k records.</description>
        <inlineHelpText>Contains the scopes relevant to the group.For eg: Sales cloud implementation with 100k records.</inlineHelpText>
        <label>Scope Group</label>
        <referenceTo>E2_Scope_Group__c</referenceTo>
        <relationshipLabel>Scope</relationshipLabel>
        <relationshipName>Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_Item_Type__c</fullName>
        <inlineHelpText>Optional Field that you can use to specify if a scope item should be considered as an Epic, Story or Component.  This will allow you to filter when exporting to CMC.</inlineHelpText>
        <label>Scope Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This field is used to query the order of scope items in the way they are displayed in the add/edit scope screen to the end user in estimator 2.0 app</description>
        <inlineHelpText>Hidden; used at background only</inlineHelpText>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the name of the Scope template it is cloned from.</description>
        <inlineHelpText>Contains the name of the Scope template it is cloned from.</inlineHelpText>
        <label>Source Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipName>Cloned_Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Id__c</fullName>
        <formula>IF( NOT( ISBLANK( Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c )),Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c ,
IF( NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)), Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)),
Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)),
Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)),Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)),
Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)), Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)), Parent_Scope__r.Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__r.Parent_Scope__c)), Parent_Scope__r.Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__r.Parent_Scope__c)),Parent_Scope__r.Parent_Scope__c,
IF(NOT(ISBLANK(Parent_Scope__c)),Parent_Scope__c, NULL)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This ID is used by Scope LOE Hrs calculation for all its child scopes</inlineHelpText>
        <label>Ultimate Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the ultimate (topmost )scope that the current scope is pointing to.</description>
        <inlineHelpText>This is the ultimate i.e. the topmost scope that the current scope is pointing to.</inlineHelpText>
        <label>Ultimate Parent Scope</label>
        <referenceTo>E2_Scope__c</referenceTo>
        <relationshipName>E2_Scopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scope</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Scope_Templates</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Description__c</columns>
        <columns>Parent_Scope__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Scope_Group__c</columns>
        <columns>Presales_LOE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>E2_Scope__c.Template</value>
        </filters>
        <label>Scope Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Scopes</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Description__c</columns>
        <columns>Parent_Scope__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Presales_LOE__c</columns>
        <columns>Is_Favourite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>E2_Scope__c.Scope</value>
        </filters>
        <label>Scopes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope</pluralLabel>
    <recordTypes>
        <fullName>Scope</fullName>
        <active>true</active>
        <description>Default Scope Record type. Mostly all scope should use this record type</description>
        <label>Scope</label>
    </recordTypes>
    <recordTypes>
        <fullName>Template</fullName>
        <active>true</active>
        <description>This is used by the Scope Template Managers as they are building out the template used in scoping of presales estimates.</description>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MandatoryComplexity</fullName>
        <active>true</active>
        <description>mandate the selection of complexity</description>
        <errorConditionFormula>ISPICKVAL(Complexity__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Complexity__c</errorDisplayField>
        <errorMessage>Complexity selection is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryEstimateForScope_RT</fullName>
        <active>true</active>
        <description>It is mandatory to allocate the scope of record type &apos;Scope&apos; with an estimate.</description>
        <errorConditionFormula>IF(RecordType.DeveloperName = &apos;Scope&apos;, 
     IF( Presales_LOE__c = null, true, false)
, false)</errorConditionFormula>
        <errorDisplayField>Presales_LOE__c</errorDisplayField>
        <errorMessage>Estimate is mandatory for scope record types</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryNoEstimateForTemplate_RT</fullName>
        <active>true</active>
        <description>No estimate should be associated with the scope record of Template record type.</description>
        <errorConditionFormula>IF(RecordType.DeveloperName = &apos;Template&apos;,
IF( Presales_LOE__c = null, false, true)
, false)</errorConditionFormula>
        <errorMessage>Estimate cannot be associated with a &apos;Template&apos; record type scope</errorMessage>
    </validationRules>
</CustomObject>